Removed CTA buttons from quiz results screen

--- a/quiz.html
+++ b/quiz.html
@@ -542,15 +542,6 @@
                                             </div>
                                         </div>
                                     </div>
-
-                                    <!-- Call to Action -->
-                                    <div class="cta-section">
-                                        <button class="btn btn-cta" data-en="Start Your Transformation"
-                                            data-ar="ابدأ رحلة التحول">ابدأ
-                                            رحلة التحول</button>
-                                        <button class="btn btn-secondary" onclick="location.reload()"
-                                            data-en="Start Over" data-ar="ابدأ من جديد">ابدأ من جديد</button>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -578,7 +569,8 @@
                         </div>
                     </nav>
 
-                    <script src="js/clinic-full.js"></script><script src="js/quiz-redirect.js"></script>
+                    <script src="js/clinic-full.js"></script>
+                    <script src="js/quiz-redirect.js"></script>
 </body>
 
 </html>
