Mobile UX optimizations: CLS fixes, touch targets, and CSS cleanup

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <header class="header" id="header">
             <div class="container">
                 <a href="#" class="logo">
-                    <img src="images/logo.png" alt="Lovers Diet Center Logo">
+                    <img src="images/logo.png" alt="Lovers Diet Center Logo" width="50" height="50">
                     <span class="logo-text" data-translate="logoText">Lovers Diet Center</span>
                 </a>
 
@@ -93,7 +93,8 @@
                 <div class="hero-logo-container">
                     <div class="hero-logo-circle"></div>
                     <div class="hero-logo-inner">
-                        <img src="images/logo.png" alt="Lovers Diet Center">
+                        <img src="images/logo.png" alt="Lovers Diet Center" width="300" height="300"
+                            style="height: auto;">
                     </div>
                 </div>
 
@@ -128,7 +129,8 @@
             <div class="container">
                 <div class="about-grid fade-in">
                     <div class="about-image doctor-image">
-                        <img src="images/photo.png" alt="Dr. Wael Mohamed Mousa">
+                        <img src="images/photo.png" alt="Dr. Wael Mohamed Mousa" width="400" height="400" loading="lazy"
+                            style="height: auto;">
                         <div class="about-badge">
                             <span class="about-badge-number" data-translate="yearsExp">10+</span>
                             <span class="about-badge-text" data-translate="yearsExpText">Years Experience</span>
@@ -243,7 +245,7 @@
                             changed my life! I've lost 15kg in 3 months and feel more energetic than ever.</p>
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=100&h=100&fit=crop"
-                                alt="Sarah M." class="testimonial-avatar">
+                                alt="Sarah M." class="testimonial-avatar" width="100" height="100" loading="lazy">
                             <div class="testimonial-info">
                                 <h4 data-translate="testimonial1Name">Sarah M.</h4>
                                 <span data-translate="testimonial1Role">Weight Loss Program</span>
@@ -258,7 +260,7 @@
                             fantastic! Despite my busy schedule, I achieved amazing results.</p>
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?w=100&h=100&fit=crop"
-                                alt="Ahmed K." class="testimonial-avatar">
+                                alt="Ahmed K." class="testimonial-avatar" width="100" height="100" loading="lazy">
                             <div class="testimonial-info">
                                 <h4 data-translate="testimonial2Name">Ahmed K.</h4>
                                 <span data-translate="testimonial2Role">Online Consultation</span>
@@ -273,7 +275,7 @@
                             genuinely caring. The nutrition plan was tailored perfectly to my needs.</p>
                         <div class="testimonial-author">
                             <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?w=100&h=100&fit=crop"
-                                alt="Fatima R." class="testimonial-avatar">
+                                alt="Fatima R." class="testimonial-avatar" width="100" height="100" loading="lazy">
                             <div class="testimonial-info">
                                 <h4 data-translate="testimonial3Name">Fatima R.</h4>
                                 <span data-translate="testimonial3Role">Healthy Lifestyle</span>
@@ -390,7 +392,8 @@
                 <div class="footer-grid">
                     <div class="footer-brand">
                         <a href="#" class="logo">
-                            <img src="images/logo.png" alt="Lovers Diet Center Logo">
+                            <img src="images/logo.png" alt="Lovers Diet Center Logo" width="50" height="50"
+                                loading="lazy">
                             <span class="logo-text" data-translate="logoText">Lovers Diet Center</span>
                         </a>
                         <p data-translate="footerDesc">Your trusted partner in achieving optimal health and wellness. We
